overflow has fixed

--- a/src/styles/base/typography.css
+++ b/src/styles/base/typography.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   background-color: #1a1818;
+  overflow-x: hidden;
 }
 
 h1 {
